# PSX-Scraper

./: .env.example  README.md  pyproject.toml
notebooks/: psx_listed_compaines.ipynb
psx_scraper/: async_run.py  company.py  constants.py  req_http.py  soup.py  symbols.py  sync_request.py  sync_run.py
